Changes: - Fixing up tests